--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,17 @@
 
 export(run_app)
 import(shiny)
+importFrom(bslib,bs_add_rules)
+importFrom(bslib,bs_theme)
+importFrom(bslib,input_dark_mode)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(sass,sass_file)
 importFrom(shiny,HTML)
+importFrom(shiny,NS)
 importFrom(shiny,column)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagAppendAttributes)
