feat: add form input

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(run_app)
 import(shiny)
+importFrom(bslib,accordion)
+importFrom(bslib,accordion_panel)
 importFrom(bslib,bs_add_rules)
 importFrom(bslib,bs_theme)
 importFrom(bslib,input_dark_mode)
@@ -18,3 +20,5 @@ importFrom(shiny,shinyApp)
 importFrom(shiny,tagAppendAttributes)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
+importFrom(whereami,cat_where)
+importFrom(whereami,whereami)
