--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ importFrom(bslib,accordion_panel)
 importFrom(bslib,bs_add_rules)
 importFrom(bslib,bs_theme)
 importFrom(bslib,input_dark_mode)
+importFrom(bslib,input_task_button)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
