feat: integrate Playwright tests and enhance UI components with test IDs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(pw,with_test_id)
 importFrom(shiny,HTML)
 importFrom(shiny,NS)
 importFrom(shiny,column)
