--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,9 @@ Imports:
     whereami
 Suggests: 
     spelling,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    pw,
+    withr
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
