chore: add Node.js setup and Playwright installation to CI workflow

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -46,6 +46,16 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: check
 
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+
+      - name: Install dependencies
+        run: cd tests/playwright && npm ci
+
+      - name: Install Playwright Browsers
+        run: cd tests/playwright && npx playwright install --with-deps
+
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
