--- a/.github/workflows/playwright.yaml
+++ b/.github/workflows/playwright.yaml
@@ -15,6 +15,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: r-lib/actions/setup-r@v2
+        with:
+        use-public-rspm: true
+
+      - uses: r-lib/actions/setup-r-dependencies@v2
+
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
