--- a/.github/workflows/playwright.yaml
+++ b/.github/workflows/playwright.yaml
@@ -1,9 +1,14 @@
 name: Playwright Tests
 on:
   push:
-    branches: [main, master]
+    branches:
+      - main
+      - master
   pull_request:
-    branches: [main, master]
+    branches:
+      - main
+      - master
+
 jobs:
   test:
     timeout-minutes: 60
@@ -17,7 +22,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
         with:
-        use-public-rspm: true
+          use-public-rspm: true
 
       - uses: r-lib/actions/setup-r-dependencies@v2
 
