--- a/.github/workflows/playwright.yaml
+++ b/.github/workflows/playwright.yaml
@@ -42,6 +42,6 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: 🗂️ playwright-report
+          name: playwright-report
           path: tests/playwright/playwright-report/
           retention-days: 30
